<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_screen"
    android:fontFamily="sans-serif-condensed-medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/photo_login" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:alpha="0.2">
    </LinearLayout>

    <TextView
        android:id="@+id/login_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/main_welcom"
        />

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_titre"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="end"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_msg"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@color/black"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:alpha="0.3"
        android:hint="@string/login_login"
        android:textColorHint="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="start"
        android:textStyle="bold"
        android:text="@string/login_login"
        />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@color/black"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:alpha="0.3"
        android:hint="@string/login_mdp"
        android:textColorHint="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="start"
        android:textStyle="bold"
        android:text="@string/login_mdp"
        />

    <Button
        android:id="@+id/login_go"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/password"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/Button_go"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:gravity="center"
        app:backgroundTint="@color/white"
        app:iconTint="@color/black"
        android:alpha="0.5"
        app:strokeColor="@color/white" />

    <Button
        android:id="@+id/bt_forget"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/login_go"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login_new_mdp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:gravity="end"
        app:backgroundTint="@color/white"
        app:iconTint="@color/black"
        android:alpha="0.5"
        app:strokeColor="@color/white" />

    <Button
        android:id="@+id/login_magic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/bt_forget"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login_finger_msg"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:gravity="center"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_baseline_fingerprint"
        app:iconTint="@color/black"
        android:alpha="0.5"
        app:strokeColor="@color/white" />
</RelativeLayout>



